--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
+@import "bootstrap/dist/css/bootstrap.min.css";
+@import "@coreui/coreui/dist/css/coreui.min.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
