--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -35,16 +35,21 @@
 
 /* === MULTI SELECT STYLING (AdminLTE compatible) === */
 .select2-container--default .select2-selection--multiple {
-  min-height: calc(2.25rem + 2px);
+  min-height: 38px;
+  max-height: 100px;
+  overflow-y: auto;
   font-size: 0.875rem;
-  border: 1px solid #ced4da;
+  border: 1px solid #ced4da !important;
   border-radius: 0.25rem;
   padding: 0.25rem 0.5rem;
   background-color: #fff;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  text-align: left;
+
+  /* Remove black outline when selected/focused */
+  outline: none;
+  box-shadow: none !important;
 }
+
 
 /* Each tag */
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
@@ -96,10 +101,12 @@
 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
   color: #5b05f0;
 }
-.select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover, .select2-container--default .select2-selection--multiple .select2-selection__choice__remove:focus {
-    background-color: #007bff;
-    color: #333;
-    outline: none;
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover,
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove:focus {
+  background-color: #007bff;
+  color: #333;
+  outline: none;
 }
 
 /* Keep it visible but clean */
@@ -124,4 +131,9 @@
   outline: none !important;
   box-shadow: none !important;
   border: none !important;
+}
+
+.list-group-item.bg-dark:hover {
+  background-color: #343a40;
+  color: #fff;
 }
